# RSS-Reader

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.ci-local  README.md  docker-compose.build.yml  docker-compose.yml  回归手动测试.md
crates/rssr-app/: Cargo.toml  build.rs  index.html
crates/rssr-app/icons/: icon.icns
crates/rssr-app/src/: app.rs  bootstrap.rs  components.rs  hooks.rs  main.rs  pages.rs  router.rs  status.rs  theme.rs  web_auth.rs  web_auth_browser.rs
crates/rssr-app/src/bootstrap/: native.rs  web.rs
crates/rssr-app/src/bootstrap/web/: AGENTS.md  adapters.rs  clipboard.rs  config.rs  exchange.rs  exchange_adapter.rs  feed.rs  mutations.rs  query.rs  refresh.rs  refresh_adapter.rs  state.rs  subscription_adapter.rs
crates/rssr-app/src/components/: entry_filters.rs  mod.rs  status_banner.rs
crates/rssr-app/src/hooks/: use_mobile_back_navigation.rs  use_reader_shortcuts.rs
crates/rssr-app/src/pages/: AGENTS.md  entries_page.rs  entries_page_bindings.rs  entries_page_cards.rs  entries_page_commands.rs  entries_page_controls.rs  entries_page_dispatch.rs  entries_page_groups.rs  entries_page_intent.rs  entries_page_presenter.rs  entries_page_reducer.rs  entries_page_runtime.rs  entries_page_session.rs  entries_page_state.rs  feeds.rs  feeds_page.rs  feeds_page_sections.rs  home.rs  mod.rs  reader_page.rs  reader_page_bindings.rs  reader_page_intent.rs  reader_page_reducer.rs  reader_page_runtime.rs  reader_page_session.rs  reader_page_state.rs  reader_page_support.rs  settings.rs  settings_page.rs  settings_page_appearance.rs  settings_page_preferences.rs  settings_page_save_effect.rs  settings_page_save_runtime.rs  settings_page_save_session.rs  settings_page_sync.rs  settings_page_sync_runtime.rs  settings_page_sync_session.rs  settings_page_sync_state.rs  settings_page_themes.rs
crates/rssr-app/src/pages/entries_page/: bindings.rs  browser_interactions.rs  cards.rs  clock.rs  controls.rs  effect.rs  facade.rs  groups.rs  intent.rs  mod.rs  presenter.rs  queries.rs  reducer.rs  runtime.rs  session.rs  state.rs
crates/rssr-app/src/pages/feeds_page/: bindings.rs  commands.rs  dispatch.rs  effect.rs  facade.rs  intent.rs  mod.rs  queries.rs  reducer.rs  runtime.rs  session.rs  state.rs
crates/rssr-app/src/pages/feeds_page/sections/: compose.rs  config_exchange.rs  mod.rs  saved.rs  support.rs
crates/rssr-app/src/pages/feeds_page_sections/: compose.rs  config_exchange.rs  saved.rs
crates/rssr-app/src/pages/reader_page/: bindings.rs  effect.rs  facade.rs  intent.rs  mod.rs  reducer.rs  runtime.rs  session.rs  state.rs  support.rs
crates/rssr-app/src/pages/settings_page/: appearance.rs  browser.rs  effect.rs  facade.rs  intent.rs  mod.rs  preferences.rs  runtime.rs  session.rs
crates/rssr-app/src/pages/settings_page/save/: effect.rs  mod.rs  runtime.rs  session.rs  state.rs
crates/rssr-app/src/pages/settings_page_themes/: lab.rs  mod.rs  presets.rs  support.rs  theme_io.rs  theme_preset.rs  theme_validation.rs
crates/rssr-app/src/ui/: commands.rs  helpers.rs  mod.rs  runtime.rs  shell.rs  shell_browser.rs  snapshot.rs
crates/rssr-app/src/ui/commands/: entries.rs  feeds.rs  mod.rs  reader.rs  settings.rs  shell.rs
crates/rssr-app/src/ui/runtime/: entries.rs  feeds.rs  mod.rs  reader.rs  services.rs  settings.rs  shell.rs
crates/rssr-app/tests/: test_builtin_theme_contracts.rs  test_default_style_token_contract.rs
crates/rssr-application/: Cargo.toml
crates/rssr-application/src/: app_state_service.rs  composition.rs  dto.rs  entries_list_service.rs  entries_workspace_service.rs  entry_service.rs  feed_catalog_service.rs  feed_service.rs  feeds_snapshot_service.rs  import_export_service.rs  lib.rs  reader_service.rs  refresh_service.rs  settings_page_service.rs  settings_service.rs  settings_sync_service.rs  shell_service.rs  startup_service.rs  subscription_workflow.rs
crates/rssr-application/src/import_export_service/: AGENTS.md  rules.rs  tests.rs
crates/rssr-cli/: Cargo.toml
crates/rssr-cli/src/: main.rs
crates/rssr-domain/: Cargo.toml
crates/rssr-domain/src/: app_state.rs  entry.rs  feed.rs  lib.rs  repository.rs  settings.rs
crates/rssr-infra/: Cargo.toml
crates/rssr-infra/src/: application_adapters.rs  composition.rs  db.rs  feed_normalization.rs  fetch.rs  lib.rs  opml.rs  parser.rs
crates/rssr-infra/src/application_adapters/: non_refresh.rs  refresh.rs
crates/rssr-infra/src/application_adapters/browser/: adapters.rs  config.rs  feed.rs  feed_request.rs  feed_response.rs  mod.rs  query.rs  state.rs
crates/rssr-infra/src/config_sync/: file_format.rs  mod.rs  webdav.rs
crates/rssr-infra/src/db/: AGENTS.md  app_state_repository.rs  entry_repository.rs  feed_repository.rs  mod.rs  settings_repository.rs  sqlite_native.rs  sqlite_web.rs  storage_backend.rs
crates/rssr-infra/src/fetch/: client.rs  mod.rs
crates/rssr-infra/src/fetch/client/: body_asset_localizer.rs  feed_http.rs  feed_response.rs  image_html.rs
crates/rssr-infra/src/opml/: mod.rs
crates/rssr-infra/src/parser/: feed_parser.rs  mod.rs
crates/rssr-infra/tests/: test_application_refresh_store_adapter.rs  test_browser_state_seed_contracts.rs  test_config_exchange_contract_harness.rs  test_config_package_codec.rs  test_config_package_io.rs  test_config_package_schema_consistency.rs  test_entry_large_dataset_performance.rs  test_entry_state_and_search.rs  test_feed_parse_dedup.rs  test_feed_refresh_flow.rs  test_opml_interop.rs  test_refresh_contract_harness.rs  test_regression_smoke.rs  test_settings_repository.rs  test_sqlite_bootstrap.rs  test_sqlite_web_backend.rs  test_subscription_contract_harness.rs  test_webdav_local_roundtrip.rs  wasm_config_exchange_contract_harness.rs  wasm_refresh_contract_harness.rs  wasm_subscription_contract_harness.rs
crates/rssr-web/: Cargo.toml
crates/rssr-web/src/: auth.rs  main.rs  proxy.rs  smoke.rs
crates/rssr-web/src/auth/: AGENTS.md  config.rs  login_flow.rs  login_page.rs  persisted_state.rs  rate_limit.rs  session.rs
(+281 files in other folders)
