[workspace]
members = [
    "crates/rssr-app",
    "crates/rssr-application",
    "crates/rssr-domain",
    "crates/rssr-infra",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Develata"]
repository = "https://example.invalid/RSS-Reader"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
dioxus = { version = "0.6", default-features = false, features = ["minimal", "router"] }
dioxus-router = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite", "time"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-human-readable"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
