[workspace]
members = [
    "crates/rssr-app",
    "crates/rssr-cli",
    "crates/rssr-application",
    "crates/rssr-domain",
    "crates/rssr-infra",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Develata"]
repository = "https://example.invalid/RSS-Reader"

[workspace.dependencies]
ammonia = "4"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7.3", features = ["router"] }
dioxus-router = "0.7.3"
feed-rs = "2"
getrandom = { version = "0.2", features = ["js"] }
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "http2", "json", "rustls-tls"] }
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite", "time"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros", "sync", "time"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-human-readable"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
