[package]
name = "rssr-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dioxus-router.workspace = true
feed-rs.workspace = true
quick-xml.workspace = true
regex.workspace = true
rssr-application = { path = "../rssr-application" }
rssr-domain = { path = "../rssr-domain" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
rfd.workspace = true
rssr-infra = { path = "../rssr-infra" }
webbrowser.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { workspace = true, features = ["mobile"] }
rssr-infra = { path = "../rssr-infra" }
webbrowser.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
gloo-file = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
reqwest.workspace = true
uuid = { version = "1", features = ["js"] }
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "CssStyleDeclaration", "Document", "Element", "Event", "EventTarget", "File", "FileList", "HtmlAnchorElement", "HtmlDocument", "HtmlElement", "HtmlInputElement", "Node", "Storage", "Url", "Window"] }
