[package]
name = "rssr-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dioxus-router.workspace = true
feed-rs.workspace = true
quick-xml.workspace = true
regex.workspace = true
rssr-application = { path = "../rssr-application" }
rssr-domain = { path = "../rssr-domain" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { workspace = true, features = ["desktop"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd.workspace = true
rssr-infra = { path = "../rssr-infra" }
webbrowser.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { workspace = true, features = ["mobile"] }
rssr-infra = { path = "../rssr-infra" }
webbrowser.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
dioxus = { workspace = true, features = ["web"] }
gloo-file = { version = "0.3", features = ["futures"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
reqwest.workspace = true
rssr-infra = { path = "../rssr-infra" }
tracing-wasm = "0.2"
uuid = { version = "1", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "CssStyleDeclaration", "Document", "Element", "Event", "EventTarget", "File", "FileList", "HtmlAnchorElement", "HtmlDocument", "HtmlElement", "HtmlInputElement", "Location", "Node", "Storage", "Url", "Window"] }

[build-dependencies]
winresource = "0.1"
