[package]
name = "rssr-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rssr-domain = { path = "../rssr-domain" }
time.workspace = true
tokio.workspace = true
url.workspace = true
