[package]
name = "rssr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
rssr-application = { path = "../rssr-application" }
rssr-domain = { path = "../rssr-domain" }
rssr-infra = { path = "../rssr-infra" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
