[package]
name = "rssr-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
