[package]
name = "rssr-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "signal"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
